Actually fixed the website

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<div class="navigator">
-			   <button class="navitem"><a href="home.html"   class="navlink">Home</a></button><!--
+			   <button class="navitem"><a href="index.html"   class="navlink">Home</a></button><!--
 			--><button class="navitem"><a href="about.html"  class="navlink">About me</a></button><!--
 			--><button class="navitem"><a href="resume.html" class="navlink">Resume</a></button>
 			<!--hacky solution to remove spaces between buttons-->
