Fixed menus overlapping with the title of the page once and for all.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 			--><button class="navitem"><a href="resume.html" class="navlink">Resume</a></button>
 			<!--hacky solution to remove spaces between buttons-->
 		</div>
-		<br>
-		<h1>My Website</h1>
-		<p>
-		I'm Nate, and this is my website. It's not very good.
-		</p>
-		<h2></h1>
+		<div>
+			<h1>My Website</h1>
+			<p>
+			I'm Nate, and this is my website. It's not very good.
+			</p>
+		</div>
 	</body>
 </html>
